[gd_scene load_steps=3 format=3 uid="uid://bidj12e3i433q"]

[ext_resource type="Script" path="res://Data/Player/Tools/knife.gd" id="1_qqvvl"]
[ext_resource type="Texture2D" uid="uid://dlrqerol2ngbn" path="res://Assets/Tools/Knife/knifemk1.png" id="2_dxsd6"]

[node name="Knife" type="Node2D"]
script = ExtResource("1_qqvvl")

[node name="RotationPoint" type="Node2D" parent="."]

[node name="Sprite" type="Sprite2D" parent="RotationPoint"]
z_index = 45
texture_filter = 1
position = Vector2(-24, 24)
rotation = 2.35619
texture = ExtResource("2_dxsd6")

[node name="Area2D" type="Area2D" parent="."]
texture_filter = 1
collision_layer = 0

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(24, 0)
scale = Vector2(1, 1.125)
polygon = PackedVector2Array(0, 0, 0, 10, 8, 10, 15, 0, 8, -10, 0, -10)

[node name="Cooldown" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
